; ModuleID = '/home/carl/AnghaBench/SoftEtherVPN/src/Mayaqua/extr_FileIO.c_FileOpenExW.c'
source_filename = "/home/carl/AnghaBench/SoftEtherVPN/src/Mayaqua/extr_FileIO.c_FileOpenExW.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_6__ = type { i32, i32*, i32, i32 }

@MAX_SIZE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local %struct.TYPE_6__* @FileOpenExW(i32* %0, i32 %1, i32 %2) #0 {
  %4 = alloca %struct.TYPE_6__*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i8*, align 8
  %9 = alloca i64, align 8
  %10 = alloca i32, align 4
  %11 = alloca %struct.TYPE_6__*, align 8
  store i32* %0, i32** %5, align 8
  store i32 %1, i32* %6, align 4
  store i32 %2, i32* %7, align 4
  %12 = load i32, i32* @MAX_SIZE, align 4
  %13 = zext i32 %12 to i64
  %14 = call i8* @llvm.stacksave()
  store i8* %14, i8** %8, align 8
  %15 = alloca i32, i64 %13, align 16
  store i64 %13, i64* %9, align 8
  %16 = load i32*, i32** %5, align 8
  %17 = icmp eq i32* %16, null
  br i1 %17, label %18, label %19

18:                                               ; preds = %3
  store %struct.TYPE_6__* null, %struct.TYPE_6__** %4, align 8
  store i32 1, i32* %10, align 4
  br label %63

19:                                               ; preds = %3
  %20 = mul nuw i64 4, %13
  %21 = trunc i64 %20 to i32
  %22 = load i32*, i32** %5, align 8
  %23 = call i32 @InnerFilePathW(i32* %15, i32 %21, i32* %22)
  %24 = load i32*, i32** %5, align 8
  %25 = getelementptr inbounds i32, i32* %24, i64 0
  %26 = load i32, i32* %25, align 4
  %27 = icmp eq i32 %26, 124
  br i1 %27, label %28, label %59

28:                                               ; preds = %19
  %29 = call %struct.TYPE_6__* @ZeroMalloc(i32 24)
  store %struct.TYPE_6__* %29, %struct.TYPE_6__** %11, align 8
  %30 = load i32*, i32** %5, align 8
  %31 = getelementptr inbounds i32, i32* %30, i32 1
  store i32* %31, i32** %5, align 8
  %32 = load %struct.TYPE_6__*, %struct.TYPE_6__** %11, align 8
  %33 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %32, i32 0, i32 2
  %34 = load i32, i32* %33, align 8
  %35 = load i32*, i32** %5, align 8
  %36 = call i32 @UniStrCpy(i32 %34, i32 4, i32* %35)
  %37 = load %struct.TYPE_6__*, %struct.TYPE_6__** %11, align 8
  %38 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %37, i32 0, i32 3
  %39 = load i32, i32* %38, align 4
  %40 = load %struct.TYPE_6__*, %struct.TYPE_6__** %11, align 8
  %41 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %40, i32 0, i32 2
  %42 = load i32, i32* %41, align 8
  %43 = call i32 @UniToStr(i32 %39, i32 4, i32 %42)
  %44 = load %struct.TYPE_6__*, %struct.TYPE_6__** %11, align 8
  %45 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %44, i32 0, i32 0
  store i32 1, i32* %45, align 8
  %46 = load i32*, i32** %5, align 8
  %47 = call i32* @ReadHamcoreW(i32* %46)
  %48 = load %struct.TYPE_6__*, %struct.TYPE_6__** %11, align 8
  %49 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %48, i32 0, i32 1
  store i32* %47, i32** %49, align 8
  %50 = load %struct.TYPE_6__*, %struct.TYPE_6__** %11, align 8
  %51 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %50, i32 0, i32 1
  %52 = load i32*, i32** %51, align 8
  %53 = icmp eq i32* %52, null
  br i1 %53, label %54, label %57

54:                                               ; preds = %28
  %55 = load %struct.TYPE_6__*, %struct.TYPE_6__** %11, align 8
  %56 = call i32 @Free(%struct.TYPE_6__* %55)
  store %struct.TYPE_6__* null, %struct.TYPE_6__** %4, align 8
  store i32 1, i32* %10, align 4
  br label %63

57:                                               ; preds = %28
  %58 = load %struct.TYPE_6__*, %struct.TYPE_6__** %11, align 8
  store %struct.TYPE_6__* %58, %struct.TYPE_6__** %4, align 8
  store i32 1, i32* %10, align 4
  br label %63

59:                                               ; preds = %19
  %60 = load i32, i32* %6, align 4
  %61 = load i32, i32* %7, align 4
  %62 = call %struct.TYPE_6__* @FileOpenInnerW(i32* %15, i32 %60, i32 %61)
  store %struct.TYPE_6__* %62, %struct.TYPE_6__** %4, align 8
  store i32 1, i32* %10, align 4
  br label %63

63:                                               ; preds = %59, %57, %54, %18
  %64 = load i8*, i8** %8, align 8
  call void @llvm.stackrestore(i8* %64)
  %65 = load %struct.TYPE_6__*, %struct.TYPE_6__** %4, align 8
  ret %struct.TYPE_6__* %65
}

; Function Attrs: nounwind
declare i8* @llvm.stacksave() #1

declare dso_local i32 @InnerFilePathW(i32*, i32, i32*) #2

declare dso_local %struct.TYPE_6__* @ZeroMalloc(i32) #2

declare dso_local i32 @UniStrCpy(i32, i32, i32*) #2

declare dso_local i32 @UniToStr(i32, i32, i32) #2

declare dso_local i32* @ReadHamcoreW(i32*) #2

declare dso_local i32 @Free(%struct.TYPE_6__*) #2

declare dso_local %struct.TYPE_6__* @FileOpenInnerW(i32*, i32, i32) #2

; Function Attrs: nounwind
declare void @llvm.stackrestore(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
